# tree-sitter-shaderlab

./: .gitignore  .npmignore  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  implementation-plan.md  package.json  research-vscode-extension.md  tree-sitter.json
bindings/c/: tree-sitter-shaderlab.h  tree-sitter-shaderlab.pc.in
bindings/node/: binding.cc  index.d.ts
bindings/rust/: build.rs  lib.rs
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: shader.txt
